# team-scaffold

./: LICENSE  README.md  pyproject.toml  setup_project.py
scaffold/: __init__.py  __main__.py  cli.py  generator.py
scaffold/templates/: manifest.json
scaffold/templates/backend/: Dockerfile  alembic.ini  alembic_env.py  conftest.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  worker.py
scaffold/templates/backend/tests/: test_health.py
scaffold/templates/claude/agents/: architect.md  backend.md  devops.md  frontend.md  hardware.md  iot-security.md  security.md
scaffold/templates/claude/hooks/: check-dangerous-cmd.sh  guard-protected-files.sh  notify-contract-change.sh  on-session-start.sh  remind-iot-security-review.sh  remind-security-review.sh
scaffold/templates/claude/rules/: 00-team-protocol.md  07-pitfall-registry.md  backend-api.md  frontend-state.md  frontend-ui.md  (+1 more)
scaffold/templates/config/: dockerignore  env.example  gitignore
scaffold/templates/contracts/: CONTRACTS.md  data-models.yaml  error-codes.yaml
scaffold/templates/frontend/: Dockerfile  api.ts  layout.tsx  page.tsx
scaffold/templates/githooks/: commit-msg.sh  pre-commit.sh  pre-push.sh
scaffold/templates/infra/: checklist.md  deploy.sh  docker-compose.yml  nginx-default.conf  report-template.md  smoke-test.sh
scaffold/templates/root/: ARCHITECT.md  CLAUDE.md  DECISIONS.md  scaffold-version.txt  start.sh
scaffold/templates/scripts/: bootstrap_check.sh  state_cli.py
scaffold/templates/status/: role_status.md
tests/: test_generator.py
(+8 files in other folders)
